--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,14 @@
 <mvc:View
+
+	controllerName="sample1.controller.App"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
-	<Text text="Hello World"/>
+	
+	<Button 
+		text="Say Hello"
+		press=".onShowHello"
+		type="Accept"
+	
+	/>
+	
 </mvc:View>
